--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-web": "0.17.1"
