--- a/package.json
+++ b/package.json
@@ -2,21 +2,31 @@
   "name": "spacebookCL",
   "version": "0.0.1",
   "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "react-native run-android",
+    "eject": "expo eject",
+    "expo-android": "expo start --android",
+    "expo-start": "expo start",
+    "expo-ios": "expo start --ios",
     "ios": "react-native run-ios",
+    "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "web": "expo start --web"
   },
   "dependencies": {
+    "expo": "~44.0.0",
+    "expo-status-bar": "~1.2.0",
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
+    "react-dom": "17.0.1",
     "react-native": "0.67.2",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.11.1"
+    "react-native-screens": "^3.11.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
