--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react-dom": "17.0.2",
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
+    "react-native-gesture-handler": "^2.2.0",
+    "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
