--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-native": "^4.0.0",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.2",
@@ -37,7 +40,7 @@
     "@babel/runtime": "^7.17.2",
     "@react-native-community/eslint-config": "^3.0.1",
     "babel-jest": "^27.5.1",
-    "eslint": "^8.8.0",
+    "eslint": "^8.10.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2"
