--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "eslint-scope": "^5.1.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "native-base": "^3.3.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.67.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.4.1",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.11.1",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4"
   },
