--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^3.11.1",
     "react-native-svg": "^12.1.0",
-    "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
