--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.67.2",
+    "react-native-animation-library": "^0.0.8",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.4.1",
